--- a/app/lp_wizard/views/venue_wizard/crudEventArea.template.html
+++ b/app/lp_wizard/views/venue_wizard/crudEventArea.template.html
@@ -27,7 +27,7 @@
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Max Accomodation</label>
-        				 <input ng-model="vm.eventArea.accomodation" placeholder="Max Pax it can accomodate" type="text">
+        				 <input ng-model="vm.eventArea.accomodation" placeholder="Max Pax it can accomodate" type="text" ng-pattern="/^\d+$/">
       				</md-input-container>
       				<span flex-gt-xs hide-xs></span>
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
@@ -39,7 +39,7 @@
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Tax(%)</label>
-        				 <input ng-model="vm.eventArea.tax" placeholder="Tax in % as Applicable" type="text">
+        				 <input ng-model="vm.eventArea.tax" placeholder="Tax in % as Applicable" type="text" ng-pattern="/^\d+$/">
       				</md-input-container>
       				<span flex-gt-xs hide-xs></span>
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
