--- a/app/lp_wizard/views/venue_wizard/crudEventArea.template.html
+++ b/app/lp_wizard/views/venue_wizard/crudEventArea.template.html
@@ -17,17 +17,27 @@
             			
             			<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Type</label>
-        				<input ng-model="vm.eventArea.type" placeholder="Banquet Hall, Open Area etc" type="text">
+        				<input ng-model="vm.eventArea.type" placeholder="Banquet Hall, Open Area etc" type="text" name="type" required>
+      					<div ng-messages="vm.newEventAreaForm.type.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Please specify the type</div>
+              			 </div>
       				</md-input-container>
       				<span flex-gt-xs hide-xs></span>
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Name</label>
-        				<input ng-model="vm.eventArea.name" placeholder="Name of the Event Area" type="text">
+        				<input ng-model="vm.eventArea.name" placeholder="Name of the Event Area" type="text" name="name" required>
+      					<div ng-messages="vm.newEventAreaForm.name.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Please specify a Name for event area</div>
+              			 </div>
       				</md-input-container>
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Max Accomodation</label>
-        				 <input ng-model="vm.eventArea.accomodation" placeholder="Max Pax it can accomodate" type="text" ng-pattern="/^\d+$/">
+        				 <input ng-model="vm.eventArea.accomodation" placeholder="Max Pax it can accomodate" type="text" name="accomodation" ng-pattern="/^\d+$/" required>
+      					<div ng-messages="vm.newEventAreaForm.accomodation.$error" role="alert" multiple>
+              				<div ng-message="required" class="my-message">Please specify the Maximum Accomodation</div>
+              				<div ng-message="pattern" class="my-message">Maximum Accomodation should be a number</div>
+              			 </div>
       				</md-input-container>
       				<span flex-gt-xs hide-xs></span>
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
@@ -39,7 +49,10 @@
       				
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
         				<label>Tax(%)</label>
-        				 <input ng-model="vm.eventArea.tax" placeholder="Tax in % as Applicable" type="text" ng-pattern="/^\d+$/">
+        				 <input ng-model="vm.eventArea.tax" placeholder="Tax in % as Applicable eg. 17.6" type="text" ng-pattern="/^\d{1,2}(\.\d{0,2})?$/" name="tax">
+        				 <div ng-messages="vm.newEventAreaForm.tax.$error" role="alert" multiple>
+              				<div ng-message="pattern" class="my-message">Tax should be specified into a number eg. 21.6 </div>
+              			 </div>
       				</md-input-container>
       				<span flex-gt-xs hide-xs></span>
       				<md-input-container class="md-block" flex-gt-xs="45" flex-xs="100">
