--- a/app/views/login/resetforgotpwd.html
+++ b/app/views/login/resetforgotpwd.html
@@ -1,5 +1,5 @@
 <div id="resetforgotpwdModal" class="modal">
-  <div class="modal-dialog modal-sm">
+  <div class="modal-dialog modal-md">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close"  ng-click="vm.closePopup();" aria-hidden="true">×</button>
